Fixing the 'dh_bee_test' predicate that did not exist, now renamed as 'scout_rebirth'

--- a/report/Comparative Study about intelligent Agent on RDF's graph.tex
+++ b/report/Comparative Study about intelligent Agent on RDF's graph.tex
@@ -17,8 +17,8 @@
 \newenvironment{itemH}[0]{\begin{itemize}[label=$\heartsuit$, font=\color{mygray} \large]}{\end{itemize}}
 
 \begin{document}
-\title{Comparative Study about intelligent agent on RDF's graph\\
-	\textit{Bachelor Project in Semantic Web using bee and ant agent}}
+\title{Comparative Study about intelligent agents on RDF's graphs\\
+	\textit{Bachelor Project in Semantic Web using bee and ant agents}}
 \author{	Baudouin Duthoit\\
 		Student number : 2540566
 	\and
