--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -39,5 +39,6 @@
 	title = {Graph Theory and Complex Networks, An Introduction},
 	author = {Maarten van Steen},
 	year = 2010,
-	publisher = {}
+	publisher = {Maarten van Steen},
+	isbn = {978-90-815406-1-2}
 }
